test/fail/basic_syntax/unterminated_single_line_if.lily
#[
SyntaxError: Unexpected token 'end of file'.
    from unterminated_single_line_if.lily:6:
]#

if 1:
